--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python backend/manage.py test
+            python manage.py test
 
       - store_artifacts:
           path: test-reports
